FIX: adjust section-header image sizing and alignment

--- a/src/styles/sharedComponents.scss
+++ b/src/styles/sharedComponents.scss
@@ -43,7 +43,10 @@ a{
 }
 
 .section-header {
-    height: 95vh;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     overflow: hidden;
 
     .section-img {
@@ -88,12 +91,10 @@ a{
         width: 80%;
 
         .section-header {
-            display: flex;
-            justify-content: space-between;
-            height: 95vh;
+            flex-direction: row;
         
             .section-img {
-                width: 60%;
+                height: 50%;
                 animation: horizontal-slide 2s ease forwards,
                                   fade 2s  ease forwards;
             }
